styles.css
* {
    box-sizing: border-box;
}

body {
    font-family: "Outfit", sans-serif;
    color: hsl(30, 10%, 34%);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1rem;
}

main {
    width: 327px;

    h1, h2 {
        font-family: "Young Serif", serif;
    }

    h2 {
        color: hsl(14, 45%, 36%);
    }

    .bold-text {
        font-weight: bold;
    }

    ul, ol {
        display: flex;
        flex-direction: column;
        gap: .5rem;
        padding-left: 0;
        list-style-position: inside;
    }

    .preparation-container {
        background-color: hsl(330, 100%, 98%);
        border-radius: 10px;
        padding: .5rem;

        .preparation-heading {
            color: hsl(332, 51%, 32%);
            font-weight: bold;
        }
    }
}

table {
    width: 100%;
    border-width: 1px;
    display: flex;
    flex-direction: column;
    gap: 1rem;

    caption {
        text-align: left;
    }

    tbody {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        
        tr {
            display: flex;
            justify-content: space-around;
            width: 100%;
            padding: .5rem;
        }

        .tabular-value {
            color: hsl(14, 45%, 36%);
            font-weight: bold;
        }

        td {
            width: 60px;
        }

        #row-one {
            border-bottom: solid;
            border-width: 1px;
        }
        #row-two {
            border-bottom: solid;
            border-width: 1px;
        }
        #row-three {
            border-bottom: solid;
            border-width: 1px;
        }
    }
}

